[package]
name = "sadikkuzu"
version = "0.1.1"
edition = "2021"
authors = ["Sadık Kuzu <sadikkuzu@hotmail.com>"]
license = "MIT"
description = "All about SADIK KUZU"
readme = "README.md"
homepage = "https://github.com/sadikkuzu/sadikkuzu.rs"
repository = "https://github.com/sadikkuzu/sadikkuzu.rs"
keywords = ["cli", "personal", "sadikkuzu"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
